Fix footer-heading text align

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -106,6 +106,7 @@
 .footer-heading {
     font-size: 18px;
     margin-bottom: $spacing-unit / 2;
+    text-align: left;
 }
 
 .contact-list,
